# infoGraphique

./: CMakeLists.txt  README.md
includes/glad/: glad.c  glad.h
includes/stb/: stb_image.cpp
src/: bezierCurve.cpp  bezierCurve.hpp  bezierSurface.cpp  bezierSurface.hpp  camera.cpp  camera.hpp  main.cpp  mesh.cpp  mesh.hpp  shaders.cpp  shaders.hpp  skinning.cpp  skinning.hpp  utils.hpp
src/shaders/: PBR.fs  PBR_texture_maps.fs  bloom.fs  filtreGaussien.fs  lightShader.fs  materialShader.fs  materialShader.vs  normal.gs  normal.vs  screenShader.fs
